--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ matrix-synapse-py3 (1.58.0+nmu1) UNRELEASED; urgency=medium
 
   * Use poetry to manage the bundled virtualenv included with this package.
 
- -- Synapse Packaging Team <packages@matrix.org>  Wed, 30 Mar 2022 12:21:43 +0100
+ -- Synapse Packaging team <packages@matrix.org>  Wed, 30 Mar 2022 12:21:43 +0100
 
 matrix-synapse-py3 (1.57.0) stable; urgency=medium
 
